# ai-building-blocks

./: .env.example  .gitattributes  .gitignore  Makefile  README.md
docs/: module-convention.md  overview.md  prompt-style-guide.md  setup.md
examples/ai-date-course-recommender/: README.md
examples/document-summary-service/: README.md
examples/fitness-posture-ai/: README.md
examples/obsidian-ai-automation/: README.md
modules/01-llm-chat/: .env.example  README.md  pyproject.toml  run.py
modules/01-llm-chat/src/llm_chat/: __init__.py  client.py  main.py
modules/01-llm-chat/tests/: test_basic.py
modules/02-rag-doc-search/: .env.example  README.md  pyproject.toml  run.py
modules/02-rag-doc-search/src/rag_doc_search/: main.py
modules/02-rag-doc-search/tests/: test_basic.py
modules/03-prompt-template-manager/: .env.example  README.md  pyproject.toml  run.py
modules/03-prompt-template-manager/src/prompt_template_manager/: __init__.py  main.py
modules/03-prompt-template-manager/tests/: test_basic.py
modules/04-ocr-document-parser/: .env.example  README.md  pyproject.toml  run.py
modules/04-ocr-document-parser/src/ocr_document_parser/: main.py
modules/04-ocr-document-parser/tests/: test_basic.py
modules/05-image-segmentation/: .env.example  README.md  pyproject.toml  run.py
modules/05-image-segmentation/src/image_segmentation/: main.py
modules/05-image-segmentation/tests/: test_basic.py
modules/06-pose-estimation/: .env.example  README.md  pyproject.toml  run.py
modules/06-pose-estimation/src/pose_estimation/: main.py
modules/06-pose-estimation/tests/: test_basic.py
modules/07-video-frame-extractor/: .env.example  README.md  pyproject.toml  run.py
modules/07-video-frame-extractor/src/video_frame_extractor/: main.py
modules/07-video-frame-extractor/tests/: test_basic.py
modules/08-speech-to-text/: .env.example  README.md  pyproject.toml  run.py
modules/08-speech-to-text/src/speech_to_text/: main.py
modules/08-speech-to-text/tests/: test_basic.py
modules/09-text-to-speech/: .env.example  README.md  pyproject.toml  run.py
modules/09-text-to-speech/src/text_to_speech/: main.py
modules/09-text-to-speech/tests/: test_basic.py
modules/10-recommendation-engine/: .env.example  README.md  pyproject.toml  run.py
modules/10-recommendation-engine/src/recommendation_engine/: main.py
modules/10-recommendation-engine/tests/: test_basic.py
modules/11-agent-workflow/: .env.example  README.md  pyproject.toml  run.py
modules/11-agent-workflow/src/agent_workflow/: main.py
modules/11-agent-workflow/tests/: test_basic.py
modules/12-api-server-template/: .env.example  README.md  pyproject.toml  run.py
modules/12-api-server-template/src/api_server_template/: main.py
modules/12-api-server-template/tests/: test_basic.py
modules/13-fastapi-ai-service/: .env.example  README.md  pyproject.toml  run.py
modules/13-fastapi-ai-service/src/fastapi_ai_service/: main.py
modules/13-fastapi-ai-service/tests/: test_basic.py
modules/14-vector-db-template/: .env.example  README.md  pyproject.toml  run.py
modules/14-vector-db-template/src/vector_db_template/: main.py
modules/14-vector-db-template/tests/: test_basic.py
modules/15-ai-evaluation/: .env.example  README.md  pyproject.toml  run.py
modules/15-ai-evaluation/src/ai_evaluation/: main.py
modules/15-ai-evaluation/tests/: test_basic.py
modules/16-3d-reconstruction-helper/: .env.example  README.md  pyproject.toml  run.py
modules/16-3d-reconstruction-helper/src/three_d_reconstruction_helper/: main.py
modules/16-3d-reconstruction-helper/tests/: test_basic.py
modules/17-report-generator/: .env.example  README.md  pyproject.toml  run.py
modules/17-report-generator/src/report_generator/: main.py
modules/17-report-generator/tests/: test_basic.py
scripts/: clean_cache.py  create_module.py  run_all_tests.py
shared/: README.md  pyproject.toml
shared/src/ai_shared/: __init__.py  api_client.py  config.py  file_utils.py  image_utils.py  json_utils.py  logger.py  types.py  video_utils.py
