[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shared"
version = "0.1.0"
description = "Shared utilities for ai-building-blocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]
