[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-chat"
version = "0.1.0"
description = "Scaffold module for 01-llm-chat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: openai, litellm, tiktoken

[tool.setuptools.packages.find]
where = ["src"]
