[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-document-parser"
version = "0.1.0"
description = "Scaffold module for 04-ocr-document-parser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: paddleocr, pytesseract, pillow

[tool.setuptools.packages.find]
where = ["src"]
