[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-segmentation"
version = "0.1.0"
description = "Scaffold module for 05-image-segmentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: opencv-python, pillow, numpy

[tool.setuptools.packages.find]
where = ["src"]
