[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pose-estimation"
version = "0.1.0"
description = "Scaffold module for 06-pose-estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: opencv-python, mediapipe, numpy

[tool.setuptools.packages.find]
where = ["src"]
