[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-frame-extractor"
version = "0.1.0"
description = "Scaffold module for 07-video-frame-extractor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: opencv-python, ffmpeg-python, numpy

[tool.setuptools.packages.find]
where = ["src"]
