[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-text"
version = "0.1.0"
description = "Scaffold module for 08-speech-to-text"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: faster-whisper, soundfile

[tool.setuptools.packages.find]
where = ["src"]
