[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-speech"
version = "0.1.0"
description = "Scaffold module for 09-text-to-speech"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: edge-tts, gTTS

[tool.setuptools.packages.find]
where = ["src"]
