[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-server-template"
version = "0.1.0"
description = "Scaffold module for 12-api-server-template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: fastapi, uvicorn

[tool.setuptools.packages.find]
where = ["src"]
