[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-ai-service"
version = "0.1.0"
description = "Scaffold module for 13-fastapi-ai-service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: fastapi, uvicorn

[tool.setuptools.packages.find]
where = ["src"]
