[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-db-template"
version = "0.1.0"
description = "Scaffold module for 14-vector-db-template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: chromadb, faiss-cpu, numpy

[tool.setuptools.packages.find]
where = ["src"]
