[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-evaluation"
version = "0.1.0"
description = "Scaffold module for 15-ai-evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: pandas, scikit-learn, deepeval

[tool.setuptools.packages.find]
where = ["src"]
