[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "report-generator"
version = "0.1.0"
description = "Scaffold module for 17-report-generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "python-dotenv",
]

# 추천 의존성: jinja2, markdown, pandas

[tool.setuptools.packages.find]
where = ["src"]
